# webhook

./: .gitignore  README.md  cert.pem  dune  dune-project  key.pem  test_webhook.py  webhook.cabal  webhook.ml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  webhook-haskell-0.1.0.0-inplace.conf
src/: Main.hs
src/Webhook/: Config.hs  External.hs  Handler.hs  State.hs  Types.hs  Validation.hs
