cabal-version:      2.4
name:               webhook-haskell
version:            0.1.0.0
author:             Your Name
maintainer:         your.email@example.com
license:            MIT
build-type:         Simple
extra-source-files: README.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

    build-depends:
          base         ^>=4.17.0.0 && < 4.18
        , scotty       >=0.12    
        , aeson        >=2.0     
        , text         >=1.2     
        , http-conduit >=2.3     
        
        , http-types   >=0.12    
        , bytestring   >=0.10    
        , containers   >=0.6     
        , mtl          >=2.2          

library
    import:           common-settings
    exposed-modules:  Webhook.Config
                      Webhook.External
                      Webhook.Handler
                      Webhook.State
                      Webhook.Types
                      Webhook.Validation
    hs-source-dirs:   src

executable webhook-server
    import:           common-settings
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:    webhook-haskell 
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N